src/styles/highlightjs.css
@import 'highlight.js/styles/github.css';

html.dark .hljs-doctag,
html.dark .hljs-keyword,
html.dark .hljs-template-tag,
html.dark .hljs-template-variable,
html.dark .hljs-type,
html.dark .hljs-variable.language_ {
    color: #ff7b72;
}

html.dark .hljs-title,
html.dark .hljs-title.class_,
html.dark .hljs-title.class_.inherited__,
html.dark .hljs-title.function_ {
    color: #d2a8ff;
}

html.dark .hljs-attr,
html.dark .hljs-attribute,
html.dark .hljs-literal,
html.dark .hljs-meta,
html.dark .hljs-number,
html.dark .hljs-operator,
html.dark .hljs-selector-attr,
html.dark .hljs-selector-class,
html.dark .hljs-selector-id,
html.dark .hljs-variable {
    color: #79c0ff;
}

html.dark .hljs-string,
html.dark .hljs-meta .hljs-string {
    color: #a5d6ff;
}

html.dark .hljs-comment {
    color: #8b949e;
}

html.dark .hljs-tag {
    color: #7ee787;
}

